# MoneyMaze

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auth_window.cpp  auth_window.h  auth_window.ui  main.cpp  mainwindow.h  reg_window.cpp  reg_window.h  reg_window.ui
Desktop/: CMakeLists.txt
Desktop/include/: auth_window.h  deposit.h  deposit_info.h  home_screen.h  http_client.h  json_parser.h  loan.h  loan_info.h  mainwindow.h  reg_window.h
Desktop/src/: auth_window.cpp  deposit.cpp  deposit.ui  deposit_info.cpp  deposit_info.ui  home_screen.cpp  home_screen.ui  loan.cpp  loan.ui  loan_info.cpp  loan_info.ui  loan_module.cpp  mainwindow.cpp  reg_window.cpp  reg_window.ui  savings_module.cpp  savings_module.ui
Desktop/src/client/: http_client.cpp
Server/: CMakeLists.txt
Server/include/: email_sender.h  http_server.h  request_handler.h
Server/include/database/: database_manager.h  db_config.h
Server/src/: email_sender.cpp  http_server.cpp  main.cpp  player.cpp  request_handler.cpp
Server/src/database/: database_manager.cpp
database/: CMakeLists.txt  DatabaseManager.cpp
desktop/include/: auth_window.h  home_screen.h  http_client.h  loan_module.h  reg_window.h  savings_module.h
desktop/src/: home_screen.cpp  home_screen.ui  loan_module.ui  mainwindow.cpp  reg_window.cpp
desktop/src/client/: http_client.cpp
desktop/ui/: auth_window.cpp  auth_window.ui  mainwindow.cpp  reg_window.ui
include/: database_manager.h  http_client.h  http_server.h  request_handler.h
include/database/: DatabaseManager.h  db_config.h
include/ui/: profile_window.h  reg_window.h
src/client/: http_client.cpp  http_client.h
src/database/: CMakeLists.txt  DatabaseManager.cpp  database.cpp  database.h
src/player/: player.h
src/server/: request_handler.cpp
src/ui/: CMakeLists.txt  profile_window.cpp  profile_window.ui
src/ui/forms/: mainwindow.ui
src/utils/: json_parser.cpp  json_parser.h
tests/: CMakeLists.txt
tests/database/: CMakeLists.txt
